use TestUtil.sleep instead of custom sleep function, or Thread.sleep in one test, and fix IntellJ warnings